<resources>
    <string name="app_name">ShoeAR</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_camera">Camera</string>
    <string name="title_cart">Cart</string>
    <string name="title_create">Create Account</string>
    <string name="title_shoe">Cart</string>
    <string name="title_shoe_details">Cart</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="oh_no">Oh no… Something went wrong.</string>
    <string name="cart_now">Add to Cart</string>
    <string name="cancel">Remove from Cart</string>
    <string name="login">Log in</string>
    <string name="create">Create Account</string>
    <string name="logout">Log out</string>
    <string name="email">email</string>
    <string name="uname">username</string>
    <string name="submit">Submit</string>
    <string name="invalid_email">Invalid email</string>
    <string name="shoeAdded">%1$d shoe(s) has(have) been added to cart</string>
    <string name="shoeRemoved">A shoe has been removed from cart</string>
    <string name="subscriptionError">Oops, something wrong happened</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>